Refactor views to use bootstrap buttons
- Also refactor to remove some css

--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -9,7 +9,7 @@
   <hr />
   <% if can_administrate? :manage, :vote_user %>
     <%= link_to t('.manage_attendance_list'), admin_attendances_path,
-                class: 'btn primary' %>
+                class: 'btn btn-primary' %>
   <% end %>
 </div>
 
