--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -10,9 +10,9 @@
 </div>
 
 <div class="col-12 col-md-2">
-  <%= link_to(t('.all_items'), admin_items_path, class: 'btn secondary') %>
+  <%= link_to(t('.all_items'), admin_items_path, class: 'btn btn-secondary') %>
   <%= link_to(t('.destroy'), admin_item_path(@item), method: :delete,
-                                                      class: 'btn danger') %>
+                                                      class: 'btn btn-danger') %>
 
   <% if @item.single? && @item.sub_items.any? %>
     <hr />
@@ -39,13 +39,13 @@
   <% if @item.single? %>
     <%= button_to(t('.allow_multiple'), admin_item_path(@item), method: :patch,
                   params: { item: { multiplicity: :multiple } },
-                  class: 'btn primary') %>
+                  class: 'btn btn-primary') %>
   <% elsif @item.multiple? %>
     <%= link_to(t('.new_sub_item'), new_admin_item_sub_item_path(@item),
-                                    class: 'btn secondary') %>
+                                    class: 'btn btn-secondary') %>
     <%= button_to(t('.allow_single'), admin_item_path(@item), method: :patch,
                   params: { item: { multiplicity: :single } },
-                  class: 'btn secondary') %>
+                  class: 'btn btn-secondary') %>
 
   <% end %>
 </div>
