--- a/app/views/admin/votes/_form.html.erb
+++ b/app/views/admin/votes/_form.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="panel-body mt-2" id="links">
         <%= link_to_add_association(t('.add_option'), f, :vote_options,
-                                    class: 'btn secondary') %>
+                                    class: 'btn btn-secondary') %>
       </div>
     </div>
   </div>
