--- a/app/views/admin/votes/edit.html.erb
+++ b/app/views/admin/votes/edit.html.erb
@@ -6,8 +6,8 @@
 
 <div class="col-12 col-md-3">
   <%= link_to(t('.all_votes'),
-              admin_votes_path, class: 'btn secondary') %>
-  <%= link_to(t('.show'), admin_vote_path(@vote), class: 'btn secondary') %>
+              admin_votes_path, class: 'btn btn-secondary') %>
+  <%= link_to(t('.show'), admin_vote_path(@vote), class: 'btn btn-secondary') %>
   <hr />
 </div>
 
