--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -7,7 +7,7 @@
 <div class="col-12 col-md-3 mb-2">
   <%= render('application/admin_sidebar', current: :votes) %>
   <hr />
-  <%= link_to t('.new_vote'), new_admin_vote_path, class: 'btn primary' %>
+  <%= link_to t('.new_vote'), new_admin_vote_path, class: 'btn btn-primary' %>
 </div>
 
 <div class="col-12 col-md-9" id="vote-status">
