--- a/app/views/admin/votes/new.html.erb
+++ b/app/views/admin/votes/new.html.erb
@@ -6,7 +6,7 @@
 
 <div class="col-12 col-md-3">
   <%= link_to(t('.all_votes'),
-              admin_votes_path, class: 'btn secondary') %>
+              admin_votes_path, class: 'btn btn-secondary') %>
   <hr />
 </div>
 
