--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -45,7 +45,7 @@
   </ul>
 
   <h3><%= t('.questions') %></h3>
-  <%= link_to(message_path, class: 'btn primary') do %>
+  <%= link_to(message_path, class: 'btn btn-primary') do %>
     <%= fa_icon('envelope-o') %>&nbsp; Röstiga
   <% end %>
 </div>
