--- a/app/views/admin/adjustments/edit.html.erb
+++ b/app/views/admin/adjustments/edit.html.erb
@@ -6,9 +6,9 @@
 
 <div class="col-12 col-md-2">
   <%= link_to(t('.all_adjustments'),
-              admin_vote_users_path, class: 'btn secondary') %>
+              admin_vote_users_path, class: 'btn btn-secondary') %>
   <%= link_to(t('.vote_user'),
-              admin_vote_user_path(@adjustment.user), class: 'btn secondary') %>
+              admin_vote_user_path(@adjustment.user), class: 'btn btn-secondary') %>
 </div>
 
 <div class="col-12 col-md-10">
