--- a/app/views/admin/adjustments/new.html.erb
+++ b/app/views/admin/adjustments/new.html.erb
@@ -5,12 +5,14 @@
 </div>
 
 <div class="col-12 col-md-2">
-  <%= link_to(t('.all_adjustments'),
-              admin_vote_users_path, class: 'btn secondary') %>
-  <%= link_to(t('.vote_user'),
-              admin_vote_user_path(@adjustment.user), class: 'btn secondary') %>
+  <%= render('application/admin_sidebar', current: :adjustment) %>
+  <hr />
+  <div class="mb-2">
+    <%= link_to(t('.vote_user'), admin_vote_user_path(@adjustment.user),
+                                 class: 'btn btn-secondary') %>
+  </div>
 </div>
 
 <div class="col-12 col-md-10">
-  <%= render 'form', adjustment: @adjustment %>
+  <%= render('form', adjustment: @adjustment) %>
 </div>
