--- a/app/views/admin/attendances/index.html.erb
+++ b/app/views/admin/attendances/index.html.erb
@@ -6,7 +6,8 @@
 <div class="col-12 col-md-3">
   <%= render('application/admin_sidebar', current: :attendances) %>
   <hr />
-  <%= link_to t('.export'), admin_attendances_path(format: :csv), class: 'btn secondary' %>
+  <%= link_to(t('.export'), admin_attendances_path(format: :csv),
+                            class: 'btn btn-primary') %>
 </div>
 <div class="col-12 col-md-9">
   <table class="table table-striped table-bordered">
@@ -20,7 +21,7 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= link_to(user, admin_vote_user_path(user)) %></td>
-          <td><%= split_adjustments(user.adjustments) %></td>
+          <td><%= split_adjustments(user.adjustments.includes(sub_item: :item)) %></td>
         </tr>
       <% end %>
     </tbody>
