--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -7,7 +7,7 @@
 <div class="col-12 col-md-3">
   <%= render('/application/admin_sidebar', current: :items) %>
   <hr />
-  <%= link_to t('.new_item'), new_admin_item_path, class: 'btn primary' %>
+  <%= link_to t('.new_item'), new_admin_item_path, class: 'btn btn-primary' %>
 </div>
 
 <div class="col-12 col-md-9" id="vote-status" data-position="adjustment-index">
