--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="col-12 col-md-2">
-  <%= link_to(t('.all_items'), admin_items_path, class: 'btn secondary') %>
+  <%= link_to(t('.all_items'), admin_items_path, class: 'btn btn-secondary') %>
 </div>
 
 <div class="col-12 col-md-10">
