--- a/app/views/admin/news/edit.html.erb
+++ b/app/views/admin/news/edit.html.erb
@@ -5,10 +5,14 @@
 </div>
 
 <div class="col-12 col-sm-2">
-  <%= link_to(t('.all_news'),
-              admin_news_index_path, class: 'btn secondary') %>
-  <%= link_to(t('.destroy'),
-              admin_news_path(@news), method: :delete,  class: 'btn danger') %>
+  <div class="mb-2">
+    <%= link_to(t('.all_news'), admin_news_index_path,
+                                class: 'btn btn-secondary') %>
+  </div>
+  <div class="mb-2">
+    <%= link_to(t('.destroy'), admin_news_path(@news),
+                method: :delete,  class: 'btn btn-danger') %>
+  </div>
 </div>
 
 <div class="col-12 col-sm-10">
