--- a/app/views/admin/news/new.html.erb
+++ b/app/views/admin/news/new.html.erb
@@ -6,7 +6,7 @@
 
 <div class="col-12 col-md-2">
   <%= link_to(t('.all_news'),
-              admin_news_index_path, class: 'btn secondary') %>
+              admin_news_index_path, class: 'btn btn-secondary') %>
 </div>
 
 <div class="col-12 col-md-10">
