--- a/app/views/admin/sub_items/edit.html.erb
+++ b/app/views/admin/sub_items/edit.html.erb
@@ -5,9 +5,9 @@
 </div>
 
 <div class="col-12 col-md-2">
-  <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn secondary') %>
+  <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn btn-secondary') %>
   <%= link_to(t('.destroy'), admin_item_sub_item_path(@item, @sub_item), method: :delete,
-                                                      class: 'btn danger') %>
+                                                      class: 'btn btn-danger') %>
 </div>
 
 <div class="col-12 col-md-10">
