--- a/app/views/admin/sub_items/new.html.erb
+++ b/app/views/admin/sub_items/new.html.erb
@@ -6,7 +6,7 @@
 
 <div class="col-12 col-md-2">
   <%= link_to(t('.edit_item'), edit_admin_item_path(@item),
-                               class: 'btn secondary') %>
+                               class: 'btn btn-secondary') %>
 </div>
 
 <div class="col-12 col-md-10">
