--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="col-12 col-sm-2">
-  <%= link_to(t('.all'), admin_users_path, class: 'btn primary') %>
+  <%= link_to(t('.all'), admin_users_path, class: 'btn btn-primary') %>
 </div>
 
 <div class="col-12 col-sm-10 user">
