--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,10 +4,14 @@
 
 <div class="row">
   <div class="col-md-2 col-sm-12">
-    <%= link_to(t('.all'), admin_users_path(all: true),
-                           class: 'btn primary') %>
-    <%= link_to(t('.paginated'), admin_users_path,
-                                 class: 'btn secondary') %>
+    <div class="mb-2">
+      <%= link_to(t('.all'), admin_users_path(all: true),
+                             class: 'btn btn-primary') %>
+    </div>
+    <div class="mb-2">
+      <%= link_to(t('.paginated'), admin_users_path,
+                                   class: 'btn btn-secondary') %>
+    </div>
   </div>
 
   <div class="col-md-10 col-sm-12 user">
