--- a/app/views/admin/vote_users/show.html.erb
+++ b/app/views/admin/vote_users/show.html.erb
@@ -8,7 +8,7 @@
   <%= render('application/admin_sidebar', current: :vote_users) %>
   <hr />
   <%= link_to t('.all_vote_users'), admin_vote_users_path,
-              class: 'btn secondary' %>
+              class: 'btn btn-secondary' %>
 </div>
 <div class="col-12 col-md-9">
   <div class="headline">
