--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,12 +5,12 @@
       <%= image_tag('layout/small_f.png', height: '30px') %>
     <% end %>
     &nbsp;&nbsp;|&nbsp;&nbsp;
-    <%= link_to('https://github.com/fsek/voting', class: 'github') do %>
+    <%= link_to('https://github.com/fsek/voting', class: 'text-orange') do %>
       <%= fa_icon('github 2x', class: 'align-middle') %>
     <% end %>
     &nbsp;|&nbsp;&nbsp;
     <%= Time.current.year %>
     &copy;
-    <%= link_to('Röstsystem.se', 'https://rostsystem.se') %>
+    <%= link_to('Röstsystem.se', 'https://rostsystem.se', class: 'text-orange') %>
   </div>
 </footer>
