--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
 
   <% if can_administrate?(:edit, @item) %>
     <hr>
-    <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn primary') %>
+    <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn btn-primary') %>
   <% end %>
 </div>
 
