--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -9,5 +9,12 @@
 </div>
 
 <div class="col-12 col-sm-10 user">
-  <%= render('form', user: @user) %>
+  <%= simple_form_for([:admin, @user]) do |f| %>
+    <%= f.input :firstname %>
+    <%= f.input :lastname %>
+    <%= f.input :role, collection: user_roles, include_blank: false %>
+    <%= f.input(:card_number, input_html: {data: {mask: '9999-9999-9999-9999'},
+                                           autocomplete: 'off'}) %>
+    <%= f.button :submit %>
+  <% end %>
 </div>
