Rename Select2 loaders and add width constraint

--- a/app/assets/stylesheets/style/custom.scss
+++ b/app/assets/stylesheets/style/custom.scss
@@ -1,7 +1,12 @@
 .fa-agenda {
   &::before {
     content: '§';
+    font-weight: bold;
   }
+}
+
+.select2-container {
+  max-width: 100%;
 }
 
 .round-icon {
