--- a/app/views/admin/votes/edit.html.erb
+++ b/app/views/admin/votes/edit.html.erb
@@ -12,5 +12,5 @@
 </div>
 
 <div class="col-12 col-md-9">
-  <%= render 'form', vote: @vote %>
+  <%= render 'form', vote: @vote, sub_items: @sub_items %>
 </div>
