--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
         <td><%= current_user.lastname %></td>
       </tr>
     </table>
-    <%= image_tag('img/mecenatkort.jpg', class: 'img-responsive') %>
+    <%= image_tag('img/mecenatkort.jpg', class: 'img-responsive mb-4') %>
     <%= f.input(:card_number, input_html: { data: {mask: '9999-9999-9999-9999'},
                                             autocomplete: 'off' },
                               hint: markdown(t('.card_number_info'))) %>
