Remove Settings for colors

--- a/app/assets/stylesheets/colors.scss.erb
+++ b/app/assets/stylesheets/colors.scss.erb
@@ -3,5 +3,5 @@ $theme-colors: (
   "primary": #0074d9,
   "danger": #c0392b,
   "orange": #eb7125,
-  "highlight": <%= Settings.css.highlight_color %>,
+  "highlight": rgba(0, 116, 217, 0.25),
 );
