Change design och adjustments and vote_user tables

--- a/app/views/admin/adjustments/index.html.erb
+++ b/app/views/admin/adjustments/index.html.erb
@@ -18,8 +18,6 @@
 </div>
 
 <div class="col-12 col-md-9 offset-md-3">
-  <div id="status-display" class="d-none border border-success rounded text-3 p-3 mb-3"></div>
-  <div id="error-display" class="d-none border border-danger rounded text-3 p-3 mb-3"></div>
   <%= simple_form_for(:search, url: card_admin_search_path, remote: true) do |f| %>
     <%= f.input(:card_number, required: false, autofocus: true,
                 label: User.human_attribute_name(:card_number),
@@ -27,16 +25,8 @@
                              autocomplete: 'off', id: 'search-card' }) %>
   <% end %>
 
-  <p id=adjustment-status>
-  </p>
-
-  <div class="panel panel-main">
-    <table class="table admin-grid">
-      <thead id="adjustment-thead">
-      </thead>
-      <tbody id="adjustment-tbody">
-      </tbody>
-    </table>
+  <div id="vote-users-table">
+    <%= render('/admin/vote_users/table') %>
   </div>
 
   <hr>
