--- a/app/views/admin/attendances/_errors.html.erb
+++ b/app/views/admin/attendances/_errors.html.erb
@@ -1,5 +1,5 @@
-<dl>
-  <% user.errors.each do |k, v| %>
+<dl class="mb-0">
+  <% user.errors.each do |_k, v| %>
     <dd><%= v %></dd>
   <% end %>
 </dl>
