--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="col-md-2 col-sm-12 vote mb-3">
-    <span class="d-block choices">
+    <span class="d-block">
       <span class="d-block">
       <%= Vote.human_attribute_name(:choices) %>
       </span>
@@ -76,7 +76,7 @@
     <% end %>
   </div>
 
-  <div class="col-md-1 col-sm-12 vote my-3">
+  <div class="col-md-1 col-sm-12 my-3">
     <%= vote_state_link(@vote, type: 'btn btn-primary vote button') %>
 
     <% unless @vote.open? %>
@@ -88,7 +88,7 @@
     <% end %>
   </div>
 
-  <div class="col md-12 col-sm-12 vote my-3">
+  <div class="col md-12 col-sm-12 my-3">
     <%= link_to(t('.all_votes'), admin_votes_path,
                                  class: 'btn btn-primary') %>
   </div>
