--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,45 +1,45 @@
-<div class="headline">
-  <h1><%= title(t('.title')) %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= title(t('.title')) %></h1>
+  </div>
 </div>
 
-<div class="row">
-  <div class="col-md-2 col-sm-12">
-    <div class="mb-2">
-      <%= link_to(t('.all'), admin_users_path(all: true),
-                             class: 'btn btn-primary') %>
-    </div>
-    <div class="mb-2">
-      <%= link_to(t('.paginated'), admin_users_path,
-                                   class: 'btn btn-secondary') %>
-    </div>
+<div class="col-md-2 col-sm-12">
+  <div class="mb-2">
+    <%= link_to(t('.all'), admin_users_path(all: true),
+                           class: 'btn btn-primary') %>
   </div>
+  <div class="mb-2">
+    <%= link_to(t('.paginated'), admin_users_path,
+                                 class: 'btn btn-secondary') %>
+  </div>
+</div>
 
-  <div class="col-md-10 col-sm-12 user">
-    <%= paginate(@users) %>
-    <table class="table table-striped table-bordered">
-      <thead>
+<div class="col-md-10 col-sm-12">
+  <%= paginate(@users) %>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th><%= User.human_attribute_name(:name) %></th>
+        <th><%= User.human_attribute_name(:role) %></th>
+        <th><%= User.human_attribute_name(:email) %></th>
+        <th><%= User.human_attribute_name(:confirmed_at) %></th>
+        <th><%= t('.show_vote_user') %></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
         <tr>
-          <th><%= User.human_attribute_name(:name) %></th>
-          <th><%= User.human_attribute_name(:role) %></th>
-          <th><%= User.human_attribute_name(:email) %></th>
-          <th><%= User.human_attribute_name(:confirmed_at) %></th>
-          <th><%= t('.show_vote_user') %></th>
+          <td>
+            <%= link_to(admin_print_user(user), edit_admin_user_path(user)) %>
+          </td>
+          <td><%= user_role(user.role) %></td>
+          <td><%= user.email %></td>
+          <td><%= l(user.confirmed_at) if user.confirmed_at.present? %></td>
+          <td><%= link_to(t(:show), admin_vote_user_path(user)) %></td>
         </tr>
-      </thead>
-      <tbody>
-        <% @users.each do |user| %>
-          <tr>
-            <td>
-              <%= link_to(admin_print_user(user), edit_admin_user_path(user)) %>
-            </td>
-            <td><%= user_role(user.role) %></td>
-            <td><%= user.email %></td>
-            <td><%= l(user.confirmed_at) if user.confirmed_at.present? %></td>
-            <td><%= link_to(t(:show), admin_vote_user_path(user)) %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <%= paginate(@users) %>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
+  <%= paginate(@users) %>
 </div>
