New favicon: Robot!

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container p-3 text-center">
     <%= t('.developed_at') %>
     <%= link_to('https://fsektionen.se') do %>
-      <%= image_tag('layout/small_f.png', height: '30px') %>
+      <%= image_tag('small_fsek.png', height: '30px') %>
     <% end %>
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <%= link_to('https://github.com/fsek/voting', class: 'text-orange') do %>
