Mailer: setup layout

--- a/app/assets/stylesheets/colors.scss.erb
+++ b/app/assets/stylesheets/colors.scss.erb
@@ -1,7 +1,10 @@
 // https://getbootstrap.com/docs/4.0/getting-started/theming/
+$primary: #0074d9;
+$danger: #0074d9;
+$orange: #0074d9;
 $theme-colors: (
-  "primary": #0074d9,
-  "danger": #c0392b,
-  "orange": #eb7125,
+  "primary": $primary,
+  "danger": $danger,
+  "orange": $orange,
   "highlight": rgba(0, 116, 217, 0.25),
 );
