--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,18 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1><%= t('user.mailer.hello', user: @user.to_s) %></h1>
-    <%= simple_format(t('user.mailer.reset_requested')) %>
-    <%= simple_format(t('user.mailer.reset_until', time: l(Time.zone.now))) %>
+<% content_for(:title) do %>
+  <%= t('.hello', user: @user.to_s) %>
+<% end %>
 
-    <p>
-      <%= link_to(t('user.mailer.change_password'), edit_password_url(@resource, reset_password_token: @token)) %>
-    </p>
+<%= simple_format(t('.reset_requested')) %>
+<%= simple_format(t('.reset_until', time: l(Time.zone.now))) %>
 
-    <%= simple_format(t('user.mailer.reset_not_you')) %>
-    <%= simple_format(t('user.mailer.reset_problem')) %>
-  </body>
-</html>
+<br />
+
+<div style="text-align: center;">
+  <%= link_to(t('.change_password'), edit_password_url(@resource, reset_password_token: @token), class: 'btn btn-primary') %>
+</div>
+<br />
+<%= simple_format(t('.or_copy', link: edit_password_url(@resource, reset_password_token: @token))) %>
+<br />
+<br />
+
+<hr />
+<br />
+<br />
+
+<%= simple_format(t('.reset_not_you')) %>
