--- a/app/views/layouts/email/_header.html.erb
+++ b/app/views/layouts/email/_header.html.erb
@@ -1,24 +1,21 @@
-<table width="700" bgcolor="#fff" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
+<table class="head-wrap" bgcolor="#fff">
   <tr>
-    <td style="padding: 6px 0px 0px">
-      <table width="650" border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
-        <tr>
-          <td width="100%" >
-            <!--Start logo-->
-            <table  border="0" cellpadding="0" cellspacing="0" align="left" class="deviceWidth">
-              <tr>
-                <td class="center" style="padding: 20px 0px 10px 0px">
-                  <%= link_to(image_tag('logo.svg', style: 'height: 60px;'), root_url) %>
-                </td>
-                <td class="center" style="padding: 20px 0 10px 20px;">
-                  <%= content_tag(:h1, yield(:title), style: 'color: #555; display: inline;') %>
-                </td>
-              </tr>
-            </table> <!--End logo-->
-            <%= yield :menu %>
-          </td>
-        </tr>
-      </table>
+    <td></td>
+    <td class="header container">
+
+      <div class="content">
+        <table bgcolor="#fff">
+          <tr>
+            <td>
+              <%= image_tag(image_url('logo.png'), class: 'logo') %>
+            </td>
+            <td align="right">
+              <%= content_tag(:h1, t('general.title'), class: 'collapse') %>
+            </td>
+          </tr>
+        </table>
+      </div>
     </td>
+    <td></td>
   </tr>
 </table>
