--- a/app/views/message_mailer/email.html.erb
+++ b/app/views/message_mailer/email.html.erb
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h2><%= t('.sent_via') %></h2>
-    <table>
-      <tr>
-        <td><%= Message.human_attribute_name(:name) %></td>
-        <td><%= @message.name %></td>
-      </tr>
-      <tr>
-        <td><%= Message.human_attribute_name(:email) %></td>
-        <td><%= @message.email %></td>
-      </tr>
-      <tr>
-        <td><%= Message.human_attribute_name(:message) %></td>
-        <td><%= simple_format(@message.message) %></td>
-      </tr>
-    </table>
-  </body>
-</html>
+<% content_for(:title) do %>
+  <%= t('.sent_via') %>
+<% end %>
+
+<table>
+  <tr>
+    <td><%= Message.human_attribute_name(:name) %></td>
+    <td><%= @message.name %></td>
+  </tr>
+  <tr>
+    <td><%= Message.human_attribute_name(:email) %></td>
+    <td><%= @message.email %></td>
+  </tr>
+  <tr>
+    <td><%= Message.human_attribute_name(:message) %></td>
+    <td><%= simple_format(@message.message) %></td>
+  </tr>
+</table>
