--- a/app/views/admin/adjustments/_form.html.erb
+++ b/app/views/admin/adjustments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [:admin, adjustment] do |f| %>
   <%= f.association :sub_item,
-                    collection: SubItem.includes(:item),
+                    collection: SubItem.full_order,
                     label_method: :to_s, include_hidden: false,
                     include_blank: false,
                     input_html: { class: 'select2-single' } %>
