--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -9,8 +9,8 @@
   <div class="alert alert-danger fade-in" style="display: none;" id="item-status"></div>
 </div>
 
-<div class="col-12 col-md-2">
-  <%= link_to(t('.all_items'), admin_items_path, class: 'btn btn-secondary') %>
+<div class="col-12 col-md-3">
+  <%= link_to(t('.all_items'), admin_items_path, class: 'btn btn-secondary mb-2') %>
   <%= link_to(t('.destroy'), admin_item_path(@item), method: :delete,
                                                       class: 'btn btn-danger') %>
 
@@ -22,7 +22,7 @@
   <% end %>
 </div>
 
-<div class="col-12 col-md-10">
+<div class="col-12 col-md-9">
   <%= render('form', item: @item) %>
 </div>
 
@@ -35,14 +35,14 @@
   </div>
 </div>
 
-<div class="col-12 col-md-2">
+<div class="col-12 col-md-3">
   <% if @item.single? %>
     <%= button_to(t('.allow_multiple'), admin_item_path(@item), method: :patch,
                   params: { item: { multiplicity: :multiple } },
                   class: 'btn btn-primary') %>
   <% elsif @item.multiple? %>
     <%= link_to(t('.new_sub_item'), new_admin_item_sub_item_path(@item),
-                                    class: 'btn btn-secondary') %>
+                                    class: 'btn btn-secondary mb-2') %>
     <%= button_to(t('.allow_single'), admin_item_path(@item), method: :patch,
                   params: { item: { multiplicity: :single } },
                   class: 'btn btn-secondary') %>
@@ -51,7 +51,7 @@
 </div>
 
 <% if @item.multiple? %>
-  <div class="col-12 col-md-10">
+  <div class="col-12 col-md-9">
     <%= render('/admin/sub_items/table', item: @item) %>
   </div>
 <% else %>
