--- a/app/views/admin/sub_items/edit.html.erb
+++ b/app/views/admin/sub_items/edit.html.erb
@@ -4,13 +4,13 @@
   </div>
 </div>
 
-<div class="col-12 col-md-2">
-  <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn btn-secondary') %>
+<div class="col-12 col-md-3">
+  <%= link_to(t('.edit_item'), edit_admin_item_path(@item), class: 'btn btn-secondary mb-2') %>
   <%= link_to(t('.destroy'), admin_item_sub_item_path(@item, @sub_item), method: :delete,
                                                       class: 'btn btn-danger') %>
 </div>
 
-<div class="col-12 col-md-10">
+<div class="col-12 col-md-9">
   <%= render('form', item: @item, sub_item: @sub_item) %>
 </div>
 
