--- a/app/views/admin/searches/_user_form.html.erb
+++ b/app/views/admin/searches/_user_form.html.erb
@@ -1,16 +1,24 @@
 <%= simple_form_for(:search, url: user_admin_search_path,
                              wrapper: :inline_form,
-                             html: { class: 'form-inline searches' },
+                             html: { class: 'form-inline searches flex-column align-items-start' },
                              remote: true) do |f| %>
-  <%= f.input(:firstname, placeholder: User.human_attribute_name(:firstname),
-                          required: false) %>
-  <%= f.input(:lastname, placeholder: User.human_attribute_name(:lastname),
-                         required: false) %>
-  <%= f.input(:presence, collection: search_presences,
-                         include_blank: false,
-                         label: User.human_attribute_name(:presence),
-                         required: false) %>
-  <%= f.button(:submit, t('.search'), class: 'px-3 py-1 m-0 ml-2 mb-2') %>
+  <div class="d-flex mb-2">
+    <%= f.input(:firstname, placeholder: User.human_attribute_name(:firstname),
+                            required: false) %>
+    <%= f.input(:lastname, placeholder: User.human_attribute_name(:lastname),
+                           required: false) %>
+  </div>
+  <div class="d-flex mb-2">
+    <%= f.input(:card_number, required: false, autofocus: true,
+                label: User.human_attribute_name(:card_number),
+                input_html: { data: { mask: '9999-9999-9999-9999' },
+                             autocomplete: 'off', id: 'search-card' }) %>
+    <%= f.input(:presence, collection: search_presences,
+                           include_blank: false,
+                           label: User.human_attribute_name(:presence),
+                           required: false) %>
+    <%= f.button(:submit, t('.search'), class: 'px-3 py-1 m-0 ml-2 mb-2') %>
+  </div>
 <% end %>
 
 <br />
