--- a/app/views/admin/searches/card.js.erb
+++ b/app/views/admin/searches/card.js.erb
@@ -1,10 +1,13 @@
-var table = document.getElementById('vote-users-table')
-table.innerHTML = "<%= j render('admin/vote_users/table', vote_users: @vote_users) %>"
+var user = document.getElementById('vote-user')
 var statusDisplay = document.getElementById('status-display');
-<% if @vote_users.any? %>
-  statusDisplay.innerHTML = "";
+<% if @vote_user.present? %>
+  user.innerHTML = "<%= j render('admin/vote_users/user', vote_user: @vote_user) %>"
   statusDisplay.classList.replace('d-flex', 'd-none');
+  statusDisplay.innerHTML = "";
+  var link = document.getElementById('adjust');
+  link.focus()
 <% else %>
+  user.innerHTML = "";
   statusDisplay.classList.replace('d-none', 'd-flex');
-  statusDisplay.innerHTML = "<%= j t('admin.searches.no_results') %>";
+  statusDisplay.innerHTML = "<%= t('admin.searches.no_results') %>";
 <% end %>
