--- a/app/views/admin/vote_users/index.html.erb
+++ b/app/views/admin/vote_users/index.html.erb
@@ -22,11 +22,10 @@
   </div>
 </div>
 
-<div class="col-12 col-md-9" id="vote-status" data-position="vote-user-index">
-  <%= render '/admin/votes/status', vote_status_view: @vote_status_view %>
-</div>
-
-<div class="col-12 col-md-9 offset-md-3">
+<div class="col-12 col-md-9">
+  <div id="vote-status" data-position="vote-user-index">
+    <%= render '/admin/votes/status', vote_status_view: @vote_status_view %>
+  </div>
   <%= render('admin/searches/user_form') %>
   <div id="vote-users-table">
     <%= render('table', vote_users: @vote_users, pagination: true) %>
